[tool.poetry]
name = "unhealthy_food_reliance_dashboard"
version = "0.1.0"
description = "Baseline repo for unhealthy food reliance dashboard"
authors = ["Charles <alba@wustl.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"
Faker = "^14.2.0"
statistics = "^1.0.3.5"
ipython = "^8.5.0"
numpy = "^1.23.2"
fake = "^0.8"
records = "^0.5.3"
datetime = "^4.8"
plotly = "^5.11.0"
plotly-express = "^0.4.1"
urlopen = "^1.0.0"
mkdocs = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
